🚦🙆 Checkpoint ./style.css:30726734/221

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ h1{
 /*home page*/
 .home{
   text-align:center;
-  background-image: url("https://cdn-japantimes.com/wp-content/uploads/2020/07/KYODO_2031_200728_0215_0418-1595933516.jpg");
+  background-image: url("https://www.japantimes.co.jp/uploads/imported_images/uploads/2020/07/KYODO_2031_200728_0215_0418-1595933516.jpg");
 }
 h1.home1{
   font-size:11vw;
